fix open stream button in collapsed mode

--- a/less/queue.less
+++ b/less/queue.less
@@ -390,7 +390,7 @@
 
         position: absolute;
         top: 6px;
-        right: 94px;
+        right: 70px;
 
         .open-stream {
             &:not(.open) {
